objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CSI_Recording__c</fullName>
        <description>For CSI Integration</description>
        <inlineHelpText>For CSI Integration</inlineHelpText>
        <label>CSI Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Call_Reason__c</fullName>
        <description>Used by HRB call center to track inbound call reason</description>
        <label>Call Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Access Questions</fullName>
                </value>
                <value>
                    <fullName>Call Center Hours</fullName>
                </value>
                <value>
                    <fullName>Deposit Options</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>Online Banking Questions</fullName>
                </value>
                <value>
                    <fullName>Products and Services</fullName>
                </value>
                <value>
                    <fullName>Questions About BofI</fullName>
                </value>
                <value>
                    <fullName>Transfer to BofI Customer Service</fullName>
                </value>
                <value>
                    <fullName>Transfer to Consumer Sales</fullName>
                </value>
                <value>
                    <fullName>Transfer to HRB Servicing</fullName>
                </value>
                <value>
                    <fullName>Transfer to HRB - Emerald Card</fullName>
                </value>
                <value>
                    <fullName>Transfer to HRB - Emerald Advance</fullName>
                </value>
                <value>
                    <fullName>Transfer to HRB - Refund Anticipation Check (RAC)</fullName>
                </value>
                <value>
                    <fullName>Transfer to HRB - Other Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <formula>IF( ISPICKVAL(Status , &quot;Completed&quot;),  LastModifiedBy.FirstName + &quot; &quot; +  LastModifiedBy.LastName , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>IF( ISPICKVAL(Status , &quot;Completed&quot;), LastModifiedDate, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Read__c</fullName>
        <description>Task for UDB</description>
        <label>Customer Read</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Comments Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ANI__c</fullName>
        <label>Five9 ANI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentExtension__c</fullName>
        <label>Five9 Agent Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentName__c</fullName>
        <label>Five9 Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent__c</fullName>
        <label>Five9 Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallType__c</fullName>
        <label>Five9 Call Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignId__c</fullName>
        <label>Five9CallbackCampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignName__c</fullName>
        <label>Five9CallbackCampaignName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackId__c</fullName>
        <label>Five9CallbackId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackNumber__c</fullName>
        <label>Five9CallbackNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Campaign__c</fullName>
        <label>Five9 Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Cost__c</fullName>
        <label>Five9 Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five9__Five9DNIS__c</fullName>
        <label>Five9 DNIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9HandleTime__c</fullName>
        <label>Five9 Handle Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9SessionId__c</fullName>
        <label>Five9 Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9TalkAndHoldTimeInSeconds__c</fullName>
        <label>Five9 Talk and Hold Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Five9__Five9TaskType__c</fullName>
        <label>Five9 Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Five9__Five9WrapTime__c</fullName>
        <label>Five9 After Call Work Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Glance_Duration__c</fullName>
        <formula>( G4S__Glance_End_Time__c - G4S__Glance_Start_Time__c) * 60 *24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4S__Glance_End_Time__c</fullName>
        <label>Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G4S__Glance_Guests__c</fullName>
        <label>Number of Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4S__Glance_Location__c</fullName>
        <inlineHelpText>Estimated from guest&apos;s Internet address</inlineHelpText>
        <label>First Guest&apos;s Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Glance_Session_Key__c</fullName>
        <inlineHelpText>4-digit key used by guests to join the session</inlineHelpText>
        <label>Session Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Glance_Session_Type__c</fullName>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
                <value>
                    <fullName>CoBrowse</fullName>
                </value>
                <value>
                    <fullName>ViewApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G4S__Glance_Start_Time__c</fullName>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Phone__c</fullName>
        <label>Inbound Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Assignment_Group__c</fullName>
        <description>Id for group assigned automatically assigned to specific tasks</description>
        <label>Assignment Group</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Estimated_Time__c</fullName>
        <description>Estimated number of hours/days to complete a Task</description>
        <inlineHelpText>Enter estimated time to complete a task</inlineHelpText>
        <label>Estimated Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Group</label>
        <referenceTo>nFORCE__Group__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maintenance_Type__c</fullName>
        <description>This field describes the current Maintenance category for a particular Maintenance Task</description>
        <label>Maintenance Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Task__c</fullName>
        <description>This is a text field to house the parent Task Id for maintenance subtasks.</description>
        <label>Parent Task</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SubType__c</fullName>
        <description>This field is not required. This field is manually populated. This field describes the current Maintenance type for a particluar Maintenance Task. It is dependent on the LLC_BI__Maintenance_Type__c (Maintenance Category)</description>
        <label>Maintenance Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Maintenance_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Limit Change</fullName>
                </value>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Add Authorized User</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__isTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will show the Maintenance System that the task is a template task for Maintenance Subtasks.</description>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Neustar_MPIC_Phone_Score__c</fullName>
        <description>SF - Populated with Neustar MPIC phone score value at time of task creation via workflow rule [does not update after creation]</description>
        <label>Neustar MPIC - Phone Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neustar_Phone_Validation__c</fullName>
        <description>SF - Populated with Neustar phone validation value at time of task creation via workflow rule [does not update after creation]</description>
        <label>Neustar Phone - Validation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_Research_Only__c</fullName>
        <label>Notes - Research Only</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Division__c</fullName>
        <label>Owner Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Quality_Score__c</fullName>
        <label>Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Exception_Offered__c</fullName>
        <description>Used by HRB</description>
        <label>Rate Exception Offered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recording_URL__c</fullName>
        <formula>&quot;will update once FTP server is live&quot;</formula>
        <label>Recording URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recording__c</fullName>
        <formula>IF(ISBLANK(qbdialer__CallRecordingURL__c),&apos;&apos;,HYPERLINK(qbdialer__CallRecordingURL__c,&quot;Listen&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Record_Type__c</fullName>
        <label>Reporting Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Account_Owner__c</fullName>
        <description>Hidden field used by Specialty Finance to capture Account owner at time of Task creation (populated via workflow)</description>
        <label>SF - Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Correct_Contact_Details__c</fullName>
        <description>Used by Specialty Finance; required value if Call Result field = &quot;Correct Contact&quot;</description>
        <label>Correct Contact Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not available</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Interested in the future</fullName>
                </value>
                <value>
                    <fullName>Pricing requested</fullName>
                </value>
                <value>
                    <fullName>VOB completed</fullName>
                </value>
                <value>
                    <fullName>Pricing accepted</fullName>
                </value>
                <value>
                    <fullName>Deal in progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Sales_Status__c</fullName>
        <description>Hidden field used by Specialty Finance to capture Account Sales Status at time of Task creation (populated via workflow)</description>
        <label>SF - Sales Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL_ID__c</fullName>
        <externalId>true</externalId>
        <label>SQL ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Docs Out</fullName>
                </value>
                <value>
                    <fullName>Docs Back</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Prep to Fund</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task_Completed__c</fullName>
        <description>Used by SF. Populated through workflow with current date/time when status is set to &quot;Completed&quot;.</description>
        <label>Task Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Completion_Time_in_minutes__c</fullName>
        <formula>/*days*/
(FLOOR( Task_Completed__c - Task_Started__c ) * 24 * 60) +
/*hours*/
(FLOOR( MOD( (Task_Completed__c - Task_Started__c) * 24, 24 ) ) * 60)  +
/*minutes*/
(ROUND( MOD( (Task_Completed__c - Task_Started__c) * 24 * 60, 60 ), 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Completion Time (in minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Group__c</fullName>
        <label>Task Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TSBANKING</fullName>
                </value>
                <value>
                    <fullName>TSBREAKFIX</fullName>
                </value>
                <value>
                    <fullName>TSCONVERSION</fullName>
                </value>
                <value>
                    <fullName>TSINVENTORY</fullName>
                </value>
                <value>
                    <fullName>TSPRODSUPPORT</fullName>
                </value>
                <value>
                    <fullName>TSRESOLVE</fullName>
                </value>
                <value>
                    <fullName>TSTECHCOORD</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Started__c</fullName>
        <description>Used by SF. Workflow populates this field with current date/time when status changes to &quot;In Progress&quot; and a value is not already stored.</description>
        <label>Task Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Due__c</fullName>
        <label>Time Due</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Waiting_on_Someone_Else_mins__c</fullName>
        <formula>/*days*/ 
(FLOOR( Waiting_on_Someone_Else_End__c - Waiting_on_Someone_Else_Start__c ) * 24 * 60) +
/*hours*/
(FLOOR( MOD( (Waiting_on_Someone_Else_End__c - Waiting_on_Someone_Else_Start__c) * 24, 24 ) ) * 60) +
/*minutes*/
(ROUND( MOD( (Waiting_on_Someone_Else_End__c - Waiting_on_Someone_Else_Start__c) * 24 * 60, 60 ), 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Waiting on Someone Else (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiting_on_Someone_Else_End__c</fullName>
        <description>Used by Specialty Finance to capture when a Task leaves the Waiting on Someone Else status</description>
        <label>Waiting on Someone Else End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Waiting_on_Someone_Else_Start__c</fullName>
        <description>Used by Specialty Finance to capture when a Task enters the Waiting on Someone Else status</description>
        <label>Waiting on Someone Else Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cnx__CTIInfo__c</fullName>
        <description>Additional CTI Information</description>
        <label>CTI Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isdc_acd_name__c</fullName>
        <label>ACD Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdc_day_week__c</fullName>
        <label>Day of the Week</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdc_dialed_phone_number__c</fullName>
        <label>Phone Dialed</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>isdc_dialer_call_type__c</fullName>
        <label>Dialer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Click-to-Call</fullName>
                </value>
                <value>
                    <fullName>Seek</fullName>
                </value>
                <value>
                    <fullName>Domino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isdc_dialer_list_name__c</fullName>
        <label>List Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdc_dialer_query_name__c</fullName>
        <label>Query Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_call_answered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_call_failover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Failover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_callerid__c</fullName>
        <label>Inbound Caller-ID</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_failover_number__c</fullName>
        <label>Failover Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_number_dialed__c</fullName>
        <label>Inbound Number Dialed</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_routed_to_last_caller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Route to Last Caller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_routed_to_owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Route to Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_wait_time__c</fullName>
        <label>Wait Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isdc_local_presence_call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__CallRecordingURL__c</fullName>
        <description>Link to the call recording</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Date_Time__c</fullName>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Dial_Number__c</fullName>
        <description>Total number of dials on the record being called</description>
        <label>Call Dial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Hour__c</fullName>
        <description>Hour in which the call was placed from the record&apos;s perspective</description>
        <label>Call Hour</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Lead_Status__c</fullName>
        <description>Lead Status of the record called</description>
        <label>Call Lead Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Ring_Time__c</fullName>
        <description>Ring Time of the phone call</description>
        <label>Call Ring Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Time_Zone__c</fullName>
        <description>Time zone of the number being called</description>
        <label>Call Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Callback_Date_Time__c</fullName>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ImpressionId__c</fullName>
        <externalId>true</externalId>
        <label>Impression ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>qbdialer__SMSReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Text message reminders will be sent to all attendees at the set reminder time.</inlineHelpText>
        <label>Send text msg reminder to all attendees</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Future_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Future Tasks</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__Ancillary_Service_Task_Templates</fullName>
        <columns>LLC_BI__isTemplate__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__isTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Ancillary Service Task Templates</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Five9__Five9Campaign__c</columns>
        <columns>TASK.CALLDISPOSITION</columns>
        <columns>Five9__Five9HandleTime__c</columns>
        <columns>Five9__Five9CallType__c</columns>
        <columns>Recording_URL__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
</CustomObject>